--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -111,7 +111,7 @@ pages:
   stage: pages
   image: ghcr.io/quarto-dev/quarto-full:latest
   before_script:
-    - tlmgr option repository http://ftp.math.utah.edu/pub/tex/historic/systems/texlive/2024/tlnet-final
+    - tlmgr option repository https://mirror.ctan.org/systems/texlive/tlnet
     - tlmgr update --self --verify-repo=none
     - tlmgr install beamer caption soul koma-script --verify-repo=none
     - apt-get update && apt-get install -y librsvg2-bin
