--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 # Basic Airflow cluster configuration for CeleryExecutor with Redis and PostgreSQL.
 #
 # WARNING: This configuration is for local development. Do not use it in a production deployment.
@@ -239,25 +238,31 @@ services:
     container_name: mlflow_server
     depends_on:
       - postgres
+      - s3
     ports:
       - "5001:5000"
     networks:
       - frontend
       - backend
     environment:
-      - AWS_ACCESS_KEY_ID=${MINIO_ACCESS_KEY}
-      - AWS_SECRET_ACCESS_KEY=${MINIO_SECRET_ACCESS_KEY}
-      - MLFLOW_S3_ENDPOINT_URL=http://minio:${MINIO_PORT}
-      - MLFLOW_S3_IGNORE_TLS=true
-      - MLFLOW_LOGGING_LEVEL=${MLFLOW_LOGGING_LEVEL}
+      - AWS_ACCESS_KEY_ID=minioadmin
+      - AWS_SECRET_ACCESS_KEY=minioadmin
+      - AWS_DEFAULT_REGION=us-east-1
+      - MLFLOW_S3_ENDPOINT_URL=http://minio:9000
+      - MLFLOW_TRACKING_URI=postgresql://mlflow:mlflow@postgres:5432/mlflow
+      - MLFLOW_BACKEND_STORE_URI=postgresql://mlflow:mlflow@postgres:5432/mlflow
+      - MLFLOW_LOGGING_LEVEL=${MLFLOW_LOGGING_LEVEL:-INFO}
+      - MLFLOW_BUCKET_NAME=mlflow
+      - MLFLOW_ARTIFACT_ROOT=s3://mlflow
     command: >
       mlflow server
-      --backend-store-uri postgresql://${DB_USER}:${DB_PASSWORD}@postgres:5432/${DB_NAME}
+      --backend-store-uri postgresql://mlflow:mlflow@postgres:5432/mlflow
       --host 0.0.0.0
       --serve-artifacts
-      --artifacts-destination minio://${MLFLOW_BUCKET_NAME}
+      --artifacts-destination s3://mlflow
+      --default-artifact-root s3://mlflow
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:${MLFLOW_PORT}/"]
+      test: ["CMD", "curl", "-f", "http://localhost:5000/"]
       interval: 30s
       timeout: 10s
       retries: 3
